Tue Dec 23 1997

- Changed PERL=perl5 to PERL=perl in samples/Makefile (D'OH!)
- Added read_rgb to GIFgraph::colour to allow definition of own colours
- Added t/colour.t
- Removed a lot of unnecessary quotes all over the place

Mon Dec 22 1997

- Center graph titles on axes, not on gif
- Added line types
- Moved initialise() to each module with $self->SUPER inheritance
- Added check for duplicate GD::Image object initialisation
- Added binmode() to t/ff.pl to make tests compatible with Win32 
  platforms (D'OH).

Thu Dec 18 1997

- Allow undef values in data sets, and skip them
- Added prototyping of functions
- Legends, finally
  requests from Petter Reinholdtsen <pere@link.no>
  				Giorgos Andreadakis <gand@forthnet.gr>

Tue Dec 16 1997

- Added documentation for dclrs and markers options
- removed line_width and ReadFile from the documentation (unimplemented)
- Started on port to win32
- Changed Area to use Polygon and to work with negative numbers

Mon Dec 15 1997

- Added support for negative numbers in lines, points and linespoints 
  graphs
- Added new options: zero_axis, and zero_axis_only (code and documentation)
- Added new options: y_min_value, y1_min_value, y2_min_value

Fri Dec 12 1997

- Changed 0 angle for pies to be at front/bottom, to make calculations a 
  bit easier
- Added test scripts for 'make test'

Before Fri Dec 05 1997

- Lots of minor tuning
- Added x_ticks option 
  requests from Will Mitayai Keeso Rowe - thelab@nmarcom.com
			    mparvataneni@quadravision.com (Murali Parvataneni)
- Added binmode() here and there to accommodate for platforms that need
  it.
